# aplazame_code_challenge

./: .env  .env.default  Dockerfile
nginx/: Dockerfile  create_selfsigned_certificates.sh
src/: django_run.sh  docker-compose.yml  pyproject.toml
src/code_challenge/: asgi.py  urls.py  wsgi.py
src/code_challenge/settings/: base.py
src/core/api_tests_helper/: api.py
src/nginx/: nginx-selfsigned.crt  nginx-selfsigned.key  nginx.conf
src/operations/: factories.py  models.py  urls.py
src/operations/api/v1/: serializers.py  urls.py  views.py
src/operations/api/v1/tests/: test_serializers.py  test_views.py
src/operations/migrations/: 0001_initial.py
src/users/: factories.py  models.py  settings.py  urls.py
src/users/api/v1/: serializers.py  urls.py  views.py
src/users/api/v1/tests/: test_serializers.py  test_views.py
src/users/migrations/: 0001_initial.py
src/users/tests/: test_models.py
src/wallets/: exceptions.py  factories.py  models.py  permissions.py  services.py  urls.py
src/wallets/api/v1/: serializers.py  urls.py  views.py
src/wallets/api/v1/serializers/: operations_serializers.py
src/wallets/api/v1/tests/: test_serializers.py  test_views.py
src/wallets/api/v1/tests/serializers/: test_operations_serializers.py  test_wallets_serializers.py
src/wallets/migrations/: 0001_initial.py
src/wallets/tests/: test_permissions.py  test_services.py
